Fix thin catalog images not centered

--- a/style/catalog.styl
+++ b/style/catalog.styl
@@ -27,6 +27,8 @@ cat-width = 150px
   // TODO better way to do this?
   display inline-block
 
+  text-align center
+
   padding 0
   margin 0
 
@@ -35,6 +37,7 @@ cat-width = 150px
   font-family sans-serif
 
   max-width cat-width
+  text-align left
 
 .reply-count
   text-align center
